set api and authentication

--- a/.env
+++ b/.env
@@ -1,7 +1,18 @@
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyB7TvN9qiOHFOI0nWjqn2nDJc3XaVYsyp0"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="casino-536fd.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="casino-536fd"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="casino-536fd.firebasestorage.app"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="561787706756"
-NEXT_PUBLIC_FIREBASE_APP_ID="1:561787706756:web:d6f3dcd57fb3b9698f91d1"
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-RHC4ER7P8Q"
+# Created by Vercel CLI
+AUTHENTICATION_SESSION_SECRET="WgpPA+qmLTuHXcn8iPZmaPckyjbveQB4aAcMIGPSUhQ="
+BASE_URL="http://localhost:3000"
+DATABASE_URL="postgres://neondb_owner:epwMzOflRy08@ep-nameless-flower-a41wlqpj-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL_UNPOOLED="postgresql://neondb_owner:epwMzOflRy08@ep-nameless-flower-a41wlqpj.us-east-1.aws.neon.tech/neondb?sslmode=require"
+PGDATABASE="neondb"
+PGHOST="ep-nameless-flower-a41wlqpj-pooler.us-east-1.aws.neon.tech"
+PGHOST_UNPOOLED="ep-nameless-flower-a41wlqpj.us-east-1.aws.neon.tech"
+PGPASSWORD="epwMzOflRy08"
+PGUSER="neondb_owner"
+POSTGRES_DATABASE="neondb"
+POSTGRES_HOST="ep-nameless-flower-a41wlqpj-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="epwMzOflRy08"
+POSTGRES_PRISMA_URL="postgres://neondb_owner:epwMzOflRy08@ep-nameless-flower-a41wlqpj-pooler.us-east-1.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=15&sslmode=require"
+POSTGRES_URL="postgres://neondb_owner:epwMzOflRy08@ep-nameless-flower-a41wlqpj-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require"
+POSTGRES_URL_NON_POOLING="postgres://neondb_owner:epwMzOflRy08@ep-nameless-flower-a41wlqpj.us-east-1.aws.neon.tech/neondb?sslmode=require"
+POSTGRES_URL_NO_SSL="postgres://neondb_owner:epwMzOflRy08@ep-nameless-flower-a41wlqpj-pooler.us-east-1.aws.neon.tech/neondb"
+POSTGRES_USER="neondb_owner"
