--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^6.2.1",
     "bootstrap": "^5.3.3",
+    "express": "^4.21.2",
     "firebase": "^11.1.0",
     "framer-motion": "^11.16.3",
+    "md5": "^2.3.0",
     "next": "^15.1.3",
+    "next-auth": "^4.24.11",
+    "next-client-cookies": "^2.0.1",
+    "nextjs-current-url": "^1.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -22,11 +28,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/express": "^5.0.0",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "prisma": "^6.2.1",
     "typescript": "^5"
   }
 }
