--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/express": "^5.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/md5": "^2.3.5",
     "@types/node": "^20",
     "@types/react": "^19",
