implement authentication access token

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Created by Vercel CLI
+AUTHENTICATION_SESSION_TIMEOUT="15"
 AUTHENTICATION_SESSION_SECRET="WgpPA+qmLTuHXcn8iPZmaPckyjbveQB4aAcMIGPSUhQ="
 BASE_URL="http://localhost:3000"
 DATABASE_URL="postgres://neondb_owner:epwMzOflRy08@ep-nameless-flower-a41wlqpj-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require"
